; ModuleID = '/home/carl/AnghaBench/git/extr_merge-recursive.c_shift_tree_object.c'
source_filename = "/home/carl/AnghaBench/git/extr_merge-recursive.c_shift_tree_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.repository = type { i32 }
%struct.tree = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.object_id = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.tree* (%struct.repository*, %struct.tree*, %struct.tree*, i8*)* @shift_tree_object to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.tree* @shift_tree_object(%struct.repository* %0, %struct.tree* %1, %struct.tree* %2, i8* %3) #0 {
  %5 = alloca %struct.tree*, align 8
  %6 = alloca %struct.repository*, align 8
  %7 = alloca %struct.tree*, align 8
  %8 = alloca %struct.tree*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.object_id, align 4
  store %struct.repository* %0, %struct.repository** %6, align 8
  store %struct.tree* %1, %struct.tree** %7, align 8
  store %struct.tree* %2, %struct.tree** %8, align 8
  store i8* %3, i8** %9, align 8
  %11 = load i8*, i8** %9, align 8
  %12 = load i8, i8* %11, align 1
  %13 = icmp ne i8 %12, 0
  br i1 %13, label %23, label %14

14:                                               ; preds = %4
  %15 = load %struct.repository*, %struct.repository** %6, align 8
  %16 = load %struct.tree*, %struct.tree** %7, align 8
  %17 = getelementptr inbounds %struct.tree, %struct.tree* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load %struct.tree*, %struct.tree** %8, align 8
  %20 = getelementptr inbounds %struct.tree, %struct.tree* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = call i32 @shift_tree(%struct.repository* %15, i32* %18, i32* %21, %struct.object_id* %10, i32 0)
  br label %33

23:                                               ; preds = %4
  %24 = load %struct.repository*, %struct.repository** %6, align 8
  %25 = load %struct.tree*, %struct.tree** %7, align 8
  %26 = getelementptr inbounds %struct.tree, %struct.tree* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = load %struct.tree*, %struct.tree** %8, align 8
  %29 = getelementptr inbounds %struct.tree, %struct.tree* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i8*, i8** %9, align 8
  %32 = call i32 @shift_tree_by(%struct.repository* %24, i32* %27, i32* %30, %struct.object_id* %10, i8* %31)
  br label %33

33:                                               ; preds = %23, %14
  %34 = load %struct.tree*, %struct.tree** %8, align 8
  %35 = getelementptr inbounds %struct.tree, %struct.tree* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 0
  %37 = call i64 @oideq(i32* %36, %struct.object_id* %10)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %41

39:                                               ; preds = %33
  %40 = load %struct.tree*, %struct.tree** %8, align 8
  store %struct.tree* %40, %struct.tree** %5, align 8
  br label %44

41:                                               ; preds = %33
  %42 = load %struct.repository*, %struct.repository** %6, align 8
  %43 = call %struct.tree* @lookup_tree(%struct.repository* %42, %struct.object_id* %10)
  store %struct.tree* %43, %struct.tree** %5, align 8
  br label %44

44:                                               ; preds = %41, %39
  %45 = load %struct.tree*, %struct.tree** %5, align 8
  ret %struct.tree* %45
}

declare dso_local i32 @shift_tree(%struct.repository*, i32*, i32*, %struct.object_id*, i32) #1

declare dso_local i32 @shift_tree_by(%struct.repository*, i32*, i32*, %struct.object_id*, i8*) #1

declare dso_local i64 @oideq(i32*, %struct.object_id*) #1

declare dso_local %struct.tree* @lookup_tree(%struct.repository*, %struct.object_id*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
